--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,11 +3,9 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches: ['main']
-  pull_request:
-    branches: ['main']
 
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
 
